# agentic-soc-army

./: .env.example  .gitignore  README.md  azure.yaml  main.py  pyproject.toml
.github/agents/: notebook-builder.agent.md
data/: alerts.json  entity_risk.json  network_events.json  playbook_chunks.json  process_events.json  signin_logs.json  threat_intel_chunks.json
infra/: main.bicep  main.bicepparam  main.json  postprovision.ps1  postprovision.sh
notebooks/: 00_foundation_investigation_thread.ipynb  01_multi_agent_soc_architecture.ipynb  01_soc_tooling_mcp_functions.ipynb  02_advanced_tooling_mcp.ipynb  02_rag_threat_intel_search.ipynb  03_state_memory_long_running.ipynb  03_state_memory_management.ipynb  04_knowledge_bases_rag.ipynb  04_router_worker_triage.ipynb  05_evaluation_guardrails.ipynb  05_hierarchical_soc_team_maf.ipynb  06_evaluation_guardrails.ipynb  07_operationalization_versioned_agents.ipynb
notebooks/data/: ir_playbook_credential_attack.md  sample_alerts.json  threat_intel_reference.md
src/soc_workshop/: __init__.py  clients.py  incident_schema.py  settings.py
src/soc_workshop/eval/: __init__.py
src/soc_workshop/tools/: __init__.py  kql_mock.py  search_mock.py  sentinel_mock.py
